# Game

./: .gitignore  README.md  ai_memory.json  ai_memory.pt  main.py  pyproject.toml
game/: __init__.py  ai.py  constants.py  game.py
game/sprites/: __init__.py  bullet.py  enemy.py  explosion.py  player.py  star.py
tests/: test_ai.py  test_game.py
