[project]
name = "space-invaders"
version = "0.1.0"
description = "A graphical Space Invaders game built with pygame."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "pygame>=2.0.0",
    "torch>=2.6.0",
]

[project.scripts]
space-invaders = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game"]
include = ["main.py"]
